# fast-next-wagtail

./: .replit  nirvay777@.pub  package-lock.json  package.json  pyproject.toml  replit.nix
attached_assets/: Pasted--workspace-cd-cms-workspace-cms-python-manage-py-runserver-0-0-0-0-8001-Watching-for-file-chang-1747914191930.txt  Pasted-1-1-Next-js-15-3-1-stale-Webpack-Runtime-Error-AxiosError-Network-Error-utils-api-js-162-32--1747925999639.txt  Pasted-1-4-Next-js-15-3-1-stale-Webpack-Runtime-Error-AxiosError-Network-Error-utils-api-js-162-32--1747925531546.txt  Pasted-Creating-a-video-consulting-site-involves-several-components-depending-on-whether-it-s-for-me-1746170133195.txt  Pasted-Next-js-15-3-1-stale-Webpack-Runtime-Error-AxiosError-Network-Error-utils-api-js-240-32-fetc-1747891702280.txt  Pasted-Next-js-15-3-1-stale-Webpack-Runtime-Error-ReferenceError-fetchLatestNews-is-not-defined-pages-i-1747892034495.txt  Pasted-kspace-cms-python-manage-py-runserver-0-0-0-0-8001-Watching-for-file-changes-with-StatReloader-Perf-1747467475234.txt
backend/: database.py  db_models.py  main.py  models.py
backend/migrations/: env.py
backend/routers/: articles.py  conditions.py  drugs.py  symptoms.py
cms/: api.py  db.sqlite3  manage.py
cms/api/: urls.py  views.py
cms/appointments/: models.py
cms/articles/: models.py
cms/conditions/: apps.py  models.py
cms/drugs/: models.py
cms/healthinfo/: api.py  urls.py  wsgi.py
cms/home/: models.py
cms/news/: admin.py  models.py
frontend/: .env  next.config.js  package-lock.json  package.json  tailwind.config.js
(+756 files in other folders)
